--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azure-gdpr (1.9.citus-1) stable; urgency=low
+
+  * Official 1.9 release of Azure GDPR
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Wed, 24 Aug 2022 10:45:00 +0300
+
 azure-gdpr (1.8.citus-1) stable; urgency=low
 
   * Official 1.8 release of Azure GDPR
