--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (11.1.4.citus-1) stable; urgency=low
+
+  * Official 11.1.4 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 24 Oct 2022 11:09:58 +0000
+
 citus (11.1.3.citus-1) stable; urgency=low
 
   * Official 11.1.3 release of Citus
