--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azure-storage (1.0.3.citus-1) stable; urgency=low
+
+  * Official 1.0.3 release of azure-storage.
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Fri, 4 Nov 2022 10:45:00 +0300
+
 azure-storage (1.0.2.citus-1) stable; urgency=low
 
   * Official 1.0.2 release of azure-storage.
