--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (11.0.7.citus-1) stable; urgency=low
+
+  * Official 11.0.7 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Tue, 08 Nov 2022 11:04:44 +0000
+
 citus (11.1.4.citus-1) stable; urgency=low
 
   * Official 11.1.4 release of Citus
