--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (11.1.5.citus-1) stable; urgency=low
+
+  * Official 11.1.5 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Tue, 20 Dec 2022 12:53:50 +0000
+
 citus (11.0.7.citus-1) stable; urgency=low
 
   * Official 11.0.7 release of Citus
