--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azure-storage (1.1.0.citus-1) stable; urgency=low
+
+  * Official 1.1.0 release of azure-storage.
+
+ -- Gledis Zeneli <glediszeneli@microsoft.com>  Thu, 22 Dec 2022 10:45:00 +0300
+
 azure-storage (1.0.3.citus-1) stable; urgency=low
 
   * Official 1.0.3 release of azure-storage.
