--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (11.2.0.citus-1) stable; urgency=low
+
+  * Official 11.2.0 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Fri, 03 Feb 2023 08:44:50 +0000
+
 citus (11.1.5.citus-1) stable; urgency=low
 
   * Official 11.1.5 release of Citus
