--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azure-storage (1.1.1.citus-1) stable; urgency=low
+
+  * Official 1.1.1  release of azure-storage.
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 20 Feb 2023 13:45:00 +0300
+
 azure-storage (1.1.0.citus-1) stable; urgency=low
 
   * Official 1.1.0 release of azure-storage.
