--- a/debian/changelog
+++ b/debian/changelog
@@ -2,19 +2,19 @@ pgcron (1.5.1.citus-1) stable; urgency=low
 
   * Official 1.5.1 release of Pg Cron
 
- -- Gurkan Indibay <marco@citusdata.com>  Thu, 4 Apr 2022 10:55:45 +0000
+ -- Gurkan Indibay <gindibay@microsoft.com>  Thu, 4 Apr 2022 10:55:45 +0000
 
 pgcron (1.4.2.citus-1) stable; urgency=low
 
   * Official 1.4.2 release of Pg Cron
 
- -- Gurkan Indibay <marco@citusdata.com>  Thu, 18 Aug 2022 14:55:45 +0000
+ -- Gurkan Indibay <gindibay@microsoft.com>  Thu, 18 Aug 2022 14:55:45 +0000
 
 pgcron (1.4.1.citus-1) stable; urgency=low
 
   * Official 1.4.1 release of Pg Cron
 
- -- Gurkan Indibay <marco@citusdata.com>  Mon, 29 Sep 2021 14:55:45 +0000
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 29 Sep 2021 14:55:45 +0000
 
 pgcron (1.3.1.citus-1) stable; urgency=low
 
