--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 azure-gdpr (2.1.citus-1) stable; urgency=low
 
+  * fixes to query count for 32 bit platforms and proper shmem exit handling
+
+ -- Philip Dube <phdub@microsoft.com>  Thu, 13 Apr 2023 19:29:00 +0000
+
+azure-gdpr (2.1.citus-1) stable; urgency=low
+
   * separate logged query counts into internal & external counts
 
  -- Philip Dube <phdub@microsoft.com>  Sun, 11 Mar 2023 11:45:00 +0000
