Adds rust support and 1.2.0 changes  (#1040)
* Bump pg_azure_storage into 1.2.0

* Adds environment variables

* Adds missing packages

* Removes invalid parameter from citus_package

* Removes mock azure cli

* Adds unpacked files

* Adds environment variables for pipelines

* * Removes derived files from rpm spec
* Changes nightlyref into main

* * Adds all distros into nightly pipeline
* Updates docker/login action in pipeline

* Bump pg_azure_storage into 1.2.1
We could not release 1.2.0, since it has issues in Makefile.

* Changes branch in main pipeline

* Removes debian/stretch since EOL after 30.06.2022

* Updates tools version

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azure-storage (1.2.1.citus-1) stable; urgency=low
+
+  * Official 1.2.1 release of azure-storage.
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Tue, 18 Apr 2023 10:45:00 +0300
+
 azure-storage (1.1.0.citus-1) stable; urgency=low
 
   * Official 1.1.0 release of azure-storage.
