--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (11.1.6.citus-1) stable; urgency=low
+
+  * Official 11.1.6 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Tue, 25 Apr 2023 12:37:55 +0000
+
 citus (11.2.1.citus-1) stable; urgency=low
 
   * Official 11.2.1 release of Citus
