--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (11.0.8.citus-1) stable; urgency=low
+
+  * Official 11.0.8 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Wed, 26 Apr 2023 07:14:14 +0000
+
 citus (11.1.6.citus-1) stable; urgency=low
 
   * Official 11.1.6 release of Citus
