--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (11.3.0.citus-1) stable; urgency=low
+
+  * Official 11.3.0 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Tue, 02 May 2023 10:14:52 +0000
+
 citus (10.1.6.citus-1) stable; urgency=low
 
   * Official 10.1.6 release of Citus
