--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (12.0.0.citus-1) stable; urgency=low
+
+  * Official 12.0.0 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 17 Jul 2023 06:18:25 +0000
+
 citus (11.3.0.citus-1) stable; urgency=low
 
   * Official 11.3.0 release of Citus
