--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+topn (2.6.0.citus-1) stable; urgency=low
+
+  * Support for PostgreSQL 16
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Fri, 01 Sep 2023 16:20:00 +0300
+
 topn (2.5.0.citus-1) stable; urgency=low
 
   * Support for PostgreSQL 15
