--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azure-gdpr (2.11.citus-1) stable; urgency=low
+
+  * GUC_NOT_IN_SAMPLE
+
+ -- Philip Dube <phdub@microsoft.com>  Sun, 03 Sep 2023 15:07:00 +0000
+
 azure-gdpr (2.10.citus-1) stable; urgency=low
 
   * fix count_logins segfaulting when invoked before shared memory initialized
