--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (12.1.0.citus-1) stable; urgency=low
+
+  * Official 12.1.0 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Wed, 20 Sep 2023 14:17:44 +0000
+
 citus (12.0.0.citus-1) stable; urgency=low
 
   * Official 12.0.0 release of Citus
