--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pgcron (1.6.2.citus-1) stable; urgency=low
+
+  * Official 1.6.2 release of PG Cron
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Fri, 27 Nov 2023 12:55:45 +0000
+
+
 pgcron (1.6.0.citus-1) stable; urgency=low
 
   * Official 1.6.0 release of PG Cron
