--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (11.1.7.citus-1) stable; urgency=low
+
+  * Official 11.1.7 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Wed, 14 Feb 2024 07:30:55 +0000
+
 citus (12.1.1.citus-1) stable; urgency=low
 
   * Official 12.1.1 release of Citus
