--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (11.3.1.citus-1) stable; urgency=low
+
+  * Official 11.3.1 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Wed, 14 Feb 2024 07:57:45 +0000
+
 citus (11.2.2.citus-1) stable; urgency=low
 
   * Official 11.2.2 release of Citus
